--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --open",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "dev": "vite --mode development --open",
+    "build": "vite build --mode production --open",
+    "preview": "vite preview --open"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "good-storage": "^1.1.1",
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@types/good-storage": "^1.1.0",
+    "@types/node": "^17.0.31",
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
